app/static/scss/client/single_event/single_event.scss
@import '../utils';
@import '../components/events';
@import '../../common/media_queries';

.single-event {
    .text {
        margin-left: 33%;
    }

    .details {
        i {
            margin-right: 0;
        }
        .button i {
            display: inline;
            margin-right: 1rem;

            &.fa-facebook {
                margin-left: -0.8rem;
            }

            &.fa-comment {
                margin-left: -1.1rem;
            }
        }
    }
}

@media screen and (max-width: $phone-max) {
    .single-event .text {
        margin-left: 0;
    }
}

